--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -104,3 +104,54 @@
     background-position: 50% 50%;  
   }
   
+  /* 내비게이션 */
+
+  .app-navigation{
+    background: hsla(225, 57%, 10%, 0.9);
+    color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;  
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-start;
+    align-content: flex-start;
+    padding: 10px; 
+  }
+
+  .app-navigation ul {
+    width: 100%;
+    margin-top: 10px;
+  }
+
+  .app-navigation li{
+    border-bottom: 1px solid #f1f1f1;
+  }
+
+  .app-navigation a {
+    padding: 10px;
+    display: block;  
+    transition: all 0.4s ease;
+  }
+
+  .app-navigation a:hover,
+  .app-navigation a:focus {
+    background: #2e437c;
+    color: teal;
+  }
+
+  .is-close-menu{
+    order: -1;
+    padding: 18px;
+    background-color: transparent;
+  }
+
+  .is-close-menu .close{
+    color: #fff;
+    font-size: 3rem;
+  }
+
