음료 디자인을 위한 초기 설정

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -161,3 +161,13 @@
     font-size: 3rem;
   }
 
+/* 메인 콘텐츠 */
+
+
+.ediya-menu img{
+  max-width: 100%;
+  height: auto;
+}
+@media all and (min-width: 768px){
+  
+}
