--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -162,12 +162,64 @@
   }
 
 /* 메인 콘텐츠 */
+.app-main {
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
+.ediya-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  flex-wrap: wrap;
+}
+
+.ediya-menu__item{
+  width: 100%;
+  background-color: #F5F5F5;
+}
+
+.ediya-menu__item:nth-child(n+2) {
+  margin-top: 20px;
+}
+
+.ediya-menu a[role="button"] {
+  display: block;
+  text-align: center;
+  padding-bottom: 30px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.ediya-menu figure{
+  margin: 0;
+}
 
 .ediya-menu img{
   max-width: 100%;
   height: auto;
+  transform: scale(0.9);
+  transition: 0.35s;
 }
+
+.ediya-menu a[role="button"]:hover img ,
+.ediya-menu a[role="button"]:focus img {
+  transform: scale(1);  
+}
+
 @media all and (min-width: 768px){
-  
+  .ediya-menu{
+    width: 526px;
+  }
+  .ediya-menu__item{
+    width: 248px;
+  }
+  .ediya-menu__item:nth-child(2){
+    margin-top: 0;
+  }
 }
